--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hacker News</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container nav">
       <nav>
         <button id="hamburger-btn" class="hamburger-btn">
           <img
-            class="open hamburger-icon"
+            class="hamburger-icon"
             src="./images/icon-hamburger.svg"
             alt="hamburger-icon"
           />
           <img
-            class="close close-icon"
+            class="close-icon"
             src="./images/icon-close.svg"
             alt="close-icon"
           />
         </button>
-
-        <img src="./images/logo.png" alt="logo" />
-        <h1>Hacker News</h1>
-        <img src="./images/search-icon.png" alt="search-icon" />
+        <div class="logo-wrapper">
+          <img class="logo" src="./images/logo-dark.png" alt="logo" />
+          <h1>Hacker News</h1>
+        </div>
+        <img
+          class="search-icon"
+          src="./images/search-icon.png"
+          alt="search-icon"
+        />
       </nav>
     </div>
 
