--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </nav>
     </div>
 
-    <div class="container">
+    <div class="container header">
       <header>
         <ul>
           <li>New</li>
