Footer css - mobile

--- a/index.html
+++ b/index.html
@@ -59,16 +59,24 @@
 
           <div class="card-footer">
             <p>241 points</p>
-            <img src="./images/comment-icon.png" alt="comment-icon" />
-            <p>17 comments</p>
+            <div class="comments-wrapper">
+              <img
+                class="comment-icon"
+                src="./images/comment-icon.png"
+                alt="comment-icon"
+              />
+              <p>17 comments</p>
+            </div>
           </div>
         </div>
       </section>
     </div>
 
-    <div class="container">
+    <div class="container footer">
       <footer>
-        <h3>Applications are open for YC Winter 2022</h3>
+        <div class="footer-header">
+          <h3>Applications are open for YC Winter 2022</h3>
+        </div>
         <ul>
           <li>Guidelines</li>
           <li>FAQ</li>
