Footer - Mobile Update

--- a/index.html
+++ b/index.html
@@ -70,6 +70,56 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <div class="card">
+          <div class="card-header">
+            <h3 class="author">Stephen Moran</h3>
+            <h3 class="author">3h</h3>
+          </div>
+
+          <div class="card-body">
+            <p>Apple acquires classical music streaming service Primephonic</p>
+          </div>
+
+          <div class="card-footer">
+            <p>241 points</p>
+            <div class="comments-wrapper">
+              <img
+                class="comment-icon"
+                src="./images/comment-icon.png"
+                alt="comment-icon"
+              />
+              <p>17 comments</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="card">
+          <div class="card-header">
+            <h3 class="author">Stephen Moran</h3>
+            <h3 class="author">3h</h3>
+          </div>
+
+          <div class="card-body">
+            <p>Apple acquires classical music streaming service Primephonic</p>
+          </div>
+
+          <div class="card-footer">
+            <p>241 points</p>
+            <div class="comments-wrapper">
+              <img
+                class="comment-icon"
+                src="./images/comment-icon.png"
+                alt="comment-icon"
+              />
+              <p>17 comments</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <div class="container footer">
@@ -89,7 +139,5 @@
         </ul>
       </footer>
     </div>
-
-    <div class="footer"></div>
   </body>
 </html>
